# winwrap

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_CONVENTIONS.md  CONTROL_PLAN.md  DISPATCH_DESIGN_REVIEW_PROMPT.md  EXTENSIBILITY_PROMPT.md  LICENSE  MENU_CALLBACKS_PROMPT.md  MESSAGE_TRAITS_PLAN.md  MIXINS.md  NAMING_REVIEW_PROMPT.md  README.md  REFACTOR_PROMPT.md  ROADMAP.md  TECH_DEBT.md  VISION.md
cmake/: winwrap-config.cmake.in
lib/: CMakeLists.txt
lib/include/winwrap/: control.hpp  controls.hpp  dispatcher.hpp  error.hpp  menu.hpp  message_dispatcher.hpp  message_handler.hpp  message_reflection.hpp  messages.hpp  mixins.hpp  notify_icon.hpp  win.hpp  window.hpp  window_handle.hpp
lib/include/winwrap/controls/: button.hpp  checkbox.hpp  combobox.hpp  edit.hpp
lib/include/winwrap/mixins/: clickable.hpp  commandable.hpp  file_droppable.hpp  focus_aware.hpp  keyboard_input.hpp  lifecycle.hpp  mouse_input.hpp  paintable.hpp  selection_changeable.hpp  sizable.hpp  text_changeable.hpp
lib/src/: menu.cpp  notify_icon.cpp
tests/: CMakeLists.txt  button_test.cpp  checkbox_test.cpp  combobox_test.cpp  control_test.cpp  drop_window_test.cpp  edit_test.cpp  file_droppable_test.cpp  window_test.cpp
